--- a/gobgpd.rt1.conf
+++ b/gobgpd.rt1.conf
@@ -33,21 +33,37 @@
 
 # Neighbors to announce Prefixes
 [[defined-sets.neighbor-sets]]
- neighbor-set-name = "all-neighbors"
- neighbor-info-list = ["10.10.0.20", "10.20.0.20", "10.10.0.30"]
+ neighbor-set-name = "rt2-la"
+ neighbor-info-list = ["10.20.0.20"]
+ 
+[[defined-sets.neighbor-sets]] 
+ neighbor-set-name = "rt2-rt3-lb"
+ neighbor-info-list = ["10.10.0.20", "10.10.0.30"]
 
 # Export Policy
 [[policy-definitions]]
   name = "export-policy"
   [[policy-definitions.statements]]
-    name = "export-local-net"
+    name = "export-local-net-to-la"
     [policy-definitions.statements.conditions.match-prefix-set]
       prefix-set = "local-net"
     [policy-definitions.statements.conditions.match-neighbor-set]
-      neighbor-set = "all-neighbors"
+      neighbor-set = "rt2-la"
     [policy-definitions.statements.actions]
       route-disposition = "accept-route"
 
+  [[policy-definitions.statements]]
+    name = "export-local-net-to-lb"
+    [policy-definitions.statements.conditions.match-prefix-set]
+      prefix-set = "local-net"
+    [policy-definitions.statements.conditions.match-neighbor-set]
+      neighbor-set = "rt2-rt3-lb"
+    [policy-definitions.statements.actions]
+      route-disposition = "accept-route"
+	[policy-definitions.statements.actions.bgp-actions]
+	  [policy-definitions.statements.actions.bgp-actions.set-as-path-prepend]
+        as = "65010"
+        repeat-n = 3
 
 [global.apply-policy.config]
 export-policy-list = ["export-policy"]
