--- a/gobgpd.rt3.conf
+++ b/gobgpd.rt3.conf
@@ -5,7 +5,7 @@
 [zebra]
     [zebra.config]
         enabled = true
-        url = "unix:/var/run/quagga/zserv.api"
+        url = "unix:/var/run/quagga/zserv.api" 
         redistribute-route-type-list = ["connect"]
         version = 2
 
@@ -28,21 +28,37 @@
 
 # Neighbors to announce Prefixes
 [[defined-sets.neighbor-sets]]
- neighbor-set-name = "all-neighbors"
- neighbor-info-list = ["10.10.0.10", "10.10.0.20"]
+ neighbor-set-name = "all-neighbors-no-rt1"
+ neighbor-info-list = ["10.10.0.20"]
+ 
+[[defined-sets.neighbor-sets]] 
+ neighbor-set-name = "rt1"
+ neighbor-info-list = ["10.10.0.10"]
 
 # Export Policy
 [[policy-definitions]]
   name = "export-policy"
   [[policy-definitions.statements]]
-    name = "export-local-net"
+    name = "export-local-net-no-rt1"
     [policy-definitions.statements.conditions.match-prefix-set]
       prefix-set = "local-net"
     [policy-definitions.statements.conditions.match-neighbor-set]
-      neighbor-set = "all-neighbors"
+      neighbor-set = "all-neighbors-no-rt1"
     [policy-definitions.statements.actions]
       route-disposition = "accept-route"
 
+  [[policy-definitions.statements]]
+    name = "export-local-net-to-rt1"
+    [policy-definitions.statements.conditions.match-prefix-set]
+      prefix-set = "local-net"
+    [policy-definitions.statements.conditions.match-neighbor-set]
+      neighbor-set = "rt1"
+    [policy-definitions.statements.actions]
+      route-disposition = "accept-route"
+	[policy-definitions.statements.actions.bgp-actions]
+	  [policy-definitions.statements.actions.bgp-actions.set-as-path-prepend]
+        as = "65030"
+        repeat-n = 3
 
 [global.apply-policy.config]
 export-policy-list = ["export-policy"]
