--- a/gobgpd.rt2.conf
+++ b/gobgpd.rt2.conf
@@ -31,11 +31,22 @@
    ip-prefix = "172.20.20.0/24"
    masklength-range = "24..24"
 
+[[defined-sets.prefix-sets]]
+ prefix-set-name = "all-net"
+ [[defined-sets.prefix-sets.prefix-list]]
+   ip-prefix = "172.20.0.0/16"
+   masklength-range = "24..24"
+
 # Neighbors to announce Prefixes
 [[defined-sets.neighbor-sets]]
- neighbor-set-name = "all-neighbors"
- neighbor-info-list = ["10.10.0.10", "10.20.0.10", "10.10.0.30"]
+ neighbor-set-name = "rt1-lb"
+ neighbor-info-list = ["10.10.0.20"]
+ 
 
+[[defined-sets.neighbor-sets]]
+ neighbor-set-name = "rt1-la-rt3-lb"
+ neighbor-info-list = ["10.20.0.10", "10.10.0.30"]
+ 
 # Export Policy
 [[policy-definitions]]
   name = "export-policy"
@@ -44,10 +55,18 @@
     [policy-definitions.statements.conditions.match-prefix-set]
       prefix-set = "local-net"
     [policy-definitions.statements.conditions.match-neighbor-set]
-      neighbor-set = "all-neighbors"
+      neighbor-set = "rt1-lb"
     [policy-definitions.statements.actions]
       route-disposition = "accept-route"
-
+    
+  [[policy-definitions.statements]]
+    name = "export-all"
+    [policy-definitions.statements.conditions.match-prefix-set]
+      prefix-set = "all-net"
+    [policy-definitions.statements.conditions.match-neighbor-set]
+      neighbor-set = "rt1-la-rt3-lb"
+    [policy-definitions.statements.actions]
+      route-disposition = "accept-route"
 
 [global.apply-policy.config]
 export-policy-list = ["export-policy"]
